--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actualizador del Juego</title>
+    <title>Actualizador de MC2</title>
     <style>
         @font-face {
             font-family: 'Minecraft';
